# GPXClimbProfileVisualizer

./: app.py  pyproject.toml
notebook/: notebook.ipynb
pages/: garmin_tab.py
src/: Untitled-1.ipynb  authentification.py  climb_detector.py  get_locations.py  gpx_utils.py  parser.py  plotter.py  route.py  util.py
