[project]
name = "cycling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "garminconnect>=0.2.28",
    "geopy>=2.4.1",
    "gpxpy>=1.6.2",
    "haversine>=2.9.0",
    "leafmap>=0.50.0",
    "matplotlib>=3.10.5",
    "nbformat>=4.2.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scipy>=1.16.1",
    "streamlit>=1.48.0",
    "streamlit-folium>=0.25.1",
]

[tool.uv]
package = true
